tests/snapshots/run__the_dry_run_json_matches_its_snapshot.snap
---
source: tests/run.rs
expression: "serde_json::to_string_pretty(&report).expect(\"the report re-serialises\")"
---
{
  "argv": [
    "<pytest>",
    "tests/test_core.py::test_target",
    "tests/test_core.py::test_with_fixture"
  ],
  "decision": "selected",
  "dropped": [],
  "expanded": [
    {
      "from": "tests.conftest:shelter",
      "into": [
        "tests/test_core.py::test_with_fixture"
      ],
      "kind": "fixture"
    }
  ],
  "fallback": null,
  "git_env": {
    "policy": "isolate",
    "removed": []
  },
  "node_ids": [
    {
      "node_id": "tests/test_core.py::test_target",
      "origin": "mypkg.core:target",
      "via": []
    },
    {
      "node_id": "tests/test_core.py::test_with_fixture",
      "origin": "mypkg.core:target",
      "via": [
        "tests.conftest:shelter"
      ]
    }
  ],
  "reason": null,
  "verdict": "selected"
}
