tests/snapshots/run__the_dry_run_json_without_a_fallback_matches_its_snapshot.snap
---
source: tests/run.rs
expression: "serde_json::to_string_pretty(&report).expect(\"the report re-serialises\")"
---
{
  "argv": [
    "<pytest>"
  ],
  "decision": "run_all",
  "dropped": [],
  "expanded": [],
  "fallback": null,
  "git_env": {
    "policy": "isolate",
    "removed": []
  },
  "node_ids": [],
  "reason": "non_python_changes",
  "verdict": "run_all"
}
